...

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/ListingAddress"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/round_background_light"
                            android:ems="10"
                            android:hint="3710 McClintock Ave, Los Angeles 90007, CA, USA"
                            android:inputType="textMultiLine"
...

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/ListingRoommates"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/round_background_light"
                            android:ems="10"
                            android:hint="5"
                            android:inputType="number"
...

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/ListingExpiration"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/round_background_light"
                            android:ems="10"
                            android:hint="12/31/2022"
                            android:inputType="date"
...

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent">

                        <EditText
                            android:id="@+id/ListingDescription"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_background_light"
                            android:ems="10"
                            android:gravity="start"
                            android:hint="Beautiful 8 person bedroom condominium."
...
                            app:srcCompat="@drawable/ic_baseline_forbidden_24" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/ListingCreateSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/accent"
                    android:enabled="false"
...
