...
                android:text="Discover"
                android:textColor="@color/text_primary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/CreateListingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/accent_tertiary"
                android:onClick="CreateListing"
...
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/AuthLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/accent"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"
...
        android:paddingLeft="30sp"
        android:paddingTop="10sp"
        android:paddingRight="30sp"
        android:paddingBottom="20sp"
        android:src="@drawable/ic_baseline_track_changes_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/InboxTab"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/accent_tertiary" />

    <ImageButton
        android:id="@+id/InboxTab"
        android:layout_width="wrap_content"
...
        app:chipStartPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="@+id/InboxTab"
        app:textEndPadding="8dp" />

    <ImageButton
        android:id="@+id/ProfileTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingLeft="30sp"
        android:paddingTop="10sp"
        android:paddingRight="30sp"
...
