...
                android:id="@+id/ViewListing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp">

                <Button
                    android:id="@+id/backToMainButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/background_light"
                    android:onClick="backToMain"
                    android:text="Back"
                    android:textColor="@android:color/white"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="-2dp" />

                <Button
                    android:id="@+id/deleteListing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:backgroundTint="@color/accent_secondary"
                    android:onClick="deleteListing"
                    android:text="Delete"
...
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_baseline_forbidden_24" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:id="@+id/InvitationSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:alpha="0.5"
                        android:backgroundTint="@color/accent_tertiary"
                        android:enabled="false"
...
