...
        android:text="Please sign in to continue."
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AuthTitle" />

    <EditText
        android:id="@+id/AuthEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_background_light"
        android:ems="10"
        android:hint="tommy@usc.edu"
...
        app:layout_constraintStart_toEndOf="@id/AuthEmail"
        app:layout_constraintStart_toStartOf="@+id/AuthEmail"
        app:layout_constraintTop_toTopOf="@+id/AuthEmail"
        app:srcCompat="@drawable/ic_outline_email_24" />

    <EditText
        android:id="@+id/AuthPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_background_light"
        android:ems="10"
        android:hint="**********"
...
